# Chronote

./: .env.example  .env.local.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  jest.config.ts  jest.desktop-coverage.config.ts  opencode.json  package.json  playwright.config.ts  pyproject.toml  server.json  tsconfig.json  whitelizard.txt
.codex/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
_infra/: .terraform.lock.hcl  README.md  api.tf  certificate.tf  config.tf  grafana.tf  main.tf  notifications.tf  observability.tf  secrets.tf  terraform.sandbox.tfvars.example  terraform.staging.tfvars.example  terraform.tfvars.example
_infra_state_mgmt/: .terraform.lock.hcl  state_mgmt.tf
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  main.rs
docs/: adr-20260107-desktop-audio-helper-tauri.md  adr-20260505-remote-mcp-oauth.md  adr-20260508-user-meeting-index.md  adr-20260524-mcp-meeting-control-queue.md  audio-transcription-plan.md  audio-transcription.md  deploy-guard-smoke-test.md  desktop-productization.md  feature-toggles.md  hallucination-audit-20260210.md  hallucination-mitigation-plan-20260213.md  meeting-access.md  public-docs-platform.md  tts-mvp-spec.md  tts-stt-privacy-provider-plan.md  ui-scroll-debug.md  visual-regression.md
memory-bank/: systemPatterns.md  techContext.md
patches/: js-yaml+4.2.0.patch
(+432 files in other folders)
