[package]
name = "chronote-desktop"
version = "0.1.0"
description = "Chronote desktop recorder"
authors = ["Chronote"]
edition = "2021"
build = "build.rs"

[features]
default = []
synthetic-audio = []
test-hooks = []

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "6"
hound = "3.5"
keyring = "3"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.10.0", features = [] }
tokio = { version = "1", features = ["fs", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"
